Fix pattern attribute handling for invalid regular expressions.

If BaseTextInputType::patternMismatch() was called twice, the second call
skipped ScriptRegexp::isValid() check.

BUG=639324

Review-Url: https://codereview.chromium.org/2366803002
Cr-Commit-Position: refs/heads/master@{#420604}

Former-commit-id: e7357db8054bca102ee953509b8264cdcd4f2e07